--- a/socket.io/chatapp/public/css/app.css
+++ b/socket.io/chatapp/public/css/app.css
@@ -1,11 +1,21 @@
-.container {
+#wrapper {
+    float:left;
+    width:100px;
+    border-right:1px solid black;
+    height:300px;
+    padding:10px;
+    overflow:scroll-y;
+}
+
+#chatwrapper {
     float:left;
     width:300px;
     height:250px;
     overflow:scroll-y;
-    padding:10px;
+    padding:10px;"
 }
 
 #data {
- width:200px;
+    width:200px;
 }
+
